--- a/styles/styles.css
+++ b/styles/styles.css
@@ -15,6 +15,7 @@ body{
     margin: 0;
     color: #e6e6e6;
     background-color: #000c1a;
+    user-select: none;
 }
 h1{
     font-size: 3.5rem;
@@ -366,6 +367,7 @@ header{
     flex-direction: column;
     align-items: center;
     display: flex;
+    background-color: #011328;
 }
 .nosotros__historia-img{
     width: 100%;
@@ -378,8 +380,9 @@ header{
 }
 .nosotros__historia-info{
     width: 100%;
-    padding: 25px;
+    padding: 0 30px;
     display: flex;
+    text-align: justify;
     flex-direction: column;
 }
 /*------------------------------------------------------HISTORIA---------------------------------------------------------*/
@@ -391,7 +394,7 @@ header{
 .nosotros__mvv-list{
     padding: 60px 20px;
     width: 100%;
-    gap: 15px;
+    gap: 20px;
     display: flex;
     flex-wrap: wrap;
     text-align: justify;
@@ -399,7 +402,7 @@ header{
 }
 .nosotros__mvv-item{
     width: 100%;
-    padding: 15px 0;
+    margin: 10px 0;
     max-width: 600px;
 }
 .nosotros__mvv-item-img{
@@ -472,16 +475,6 @@ header{
 
 
 /*----------------------------------------------------SECCION CLASES-----------------------------------------------------*/
-/*------------------------------------------------------HERO CLASES------------------------------------------------------*/
-.clases__hero{
-    width: 100%;
-}
-.clases__hero-video{
-    width: 100%;
-    height: 88vh;
-    background-color: #000000;
-}
-/*------------------------------------------------------HERO CLASES------------------------------------------------------*/
 .clases{
     background: linear-gradient(#000c1a,#00030a);
     padding: 50px 35px;
@@ -496,7 +489,6 @@ header{
     display: flex;
     gap: 20px;
     width: 100%;
-    margin-top: 50px;
 }
 .clases__item:nth-child(2), .clases__item:nth-child(4){
     background-color: #2a0202;
@@ -523,9 +515,6 @@ header{
     text-align: justify;
     width: 100%;
     gap: 10px;
-}
-.clases__-item-info h3{
-    color:#baaa33;
 }
 .clases__-item-btn{
     display: flex;
@@ -677,12 +666,16 @@ header{
     width: 100%;
     gap: 10px;
 }
+.lca{
+    background-color: #ffffff;
+    border-radius: 100%;
+}
 
 .contacto__academia-item{
     background-color: #011328;
 }
 .contacto__academia-item-icon{
-    width: 80px;
+    width: 100px;
 }
 .contacto__academia-item-redes-icon{
     width: 35px;
@@ -735,22 +728,27 @@ header{
     align-items: center;
     flex-direction: column;
     justify-content: center;
-    gap: 8px;
+    gap: 10px;
     width: 100%;
-    height: 350px;
-    padding: 30px;
+    height: 360px;
+    padding: 40px;
     border-radius: 8px;
 }
 .contacto__desarrollo-uptaeb, .contacto__desarrollo-devs{
     background-color: #011328;
 }
 .contacto__desarrollo-uptaeb-icon{
+    width: 120px;
+}
+.contacto__desarrollo-devs-icon{
     width: 100px;
 }
-.lca{
-    background-color: #ffffff;
-    border-radius: 100%;
+.contacto__desarrollo-devs-list{
+    gap: 5px;
+    display: flex;
+    flex-direction: column;
 }
+
 /*----------------------------------------------------SECCION CONTACTO---------------------------------------------------*/
 /*------------------------------------------------------ANIMACIONES------------------------------------------------------*/
 @keyframes aparecer{
@@ -791,11 +789,11 @@ header{
     flex-direction: row;
     }
     .nosotros__historia-img{
-    width: 45%;
+    width: 50%;
     height: 70dvh;
     }
     .nosotros__historia-info{
-    width: 55%;
+    width: 50%;
     }
     .clases__item{
     flex-wrap: nowrap;
